--- a/Mapping_GEOJSON_Points/index.html
+++ b/Mapping_GEOJSON_Points/index.html
@@ -27,3 +27,11 @@
     <!-- Our JavaScript -->
     <script type="text/javascript" src="static/js/cities.js"></script>
     <script type="text/javascript" src="static/js/logic.js"></script>
+
+
+
+    
+<body>
+    
+</body>
+</html>
